--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>Dogs are Angels</title>
     </head>
     <body>
-        <img scr= "https://media1.giphy.com/media/3oKIPsx2VAYAgEHC12/source.gif">
+        <h1>Pugs</h1>
+        <img src="https://media1.giphy.com/media/3oKIPsx2VAYAgEHC12/source.gif">
         <p>The pug is a breed of dog with physically distinctive features of a wrinkly, short-muzzled face, and curled tail. The breed has a fine, glossy coat that comes in a variety of colours, most often fawn or black, and a compact square body with well-developed muscles.</p>
     </body>
 </html>
